Project

General

Profile

Actions

Bug #10664

closed

vmxnet3s: NULL pointer errors

Added by Toomas Soome over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
2019-04-02
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with NULL pointer:

    ../../intel/io/vmxnet3s/vmxnet3_utils.c: In function 'vmxnet3_alloc_dma_mem':
    ../../intel/io/vmxnet3s/vmxnet3_utils.c:159:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
      dma->bufPA = NULL;
                 ^
    ../../intel/io/vmxnet3s/vmxnet3_utils.c: In function 'vmxnet3_free_dma_mem':
    ../../intel/io/vmxnet3s/vmxnet3_utils.c:199:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
      dma->bufPA = NULL;
                 ^
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 40a733010c7e8c82a55807f59f6e912e51355d2a

commit  40a733010c7e8c82a55807f59f6e912e51355d2a
Author: Toomas Soome <tsoome@me.com>
Date:   2019-04-10T06:23:05.000Z

    10664 vmxnet3s: NULL pointer errors
    Reviewed by: Andy Stormont <astormont@racktopsystems.com>
    Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net>
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF